[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "openai>=1.40",
    "tavily-python>=0.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
thumbnail-designer = "your_agent.main:main"
make-diagram = "your_agent.make_diagram:main"

[tool.hatch.build.targets.wheel]
packages = ["your_agent"]
